[gd_scene load_steps=34 format=3 uid="uid://k8wpbqqbyid2"]

[ext_resource type="Script" path="res://scripts/hotbar.gd" id="1_xwrf6"]
[ext_resource type="Texture2D" uid="uid://c43c73j7fgfx2" path="res://assets/misc/parede.png" id="2_i221g"]
[ext_resource type="Texture2D" uid="uid://dwp23o46saojc" path="res://assets/misc/parede_borda.png" id="3_ukb0h"]
[ext_resource type="Texture2D" uid="uid://538t5ue4oy6k" path="res://assets/misc/rogerio_o_peixe.png" id="3_wx4di"]
[ext_resource type="Texture2D" uid="uid://10hoae4dhy3r" path="res://assets/misc/parede_gato.png" id="5_fwt8m"]
[ext_resource type="Script" path="res://scripts/GatoBolaDePeloButton.gd" id="5_vq4bl"]
[ext_resource type="Texture2D" uid="uid://q8bwegeqbvb2" path="res://assets/cats/gatoBolaPelo.png" id="6_gny0a"]
[ext_resource type="Texture2D" uid="uid://bcodjyhjsb2db" path="res://assets/cats/gatoPau.png" id="7_bh45y"]
[ext_resource type="Script" path="res://scripts/GatoDePauButton.gd" id="9_63rba"]
[ext_resource type="Texture2D" uid="uid://bjw4np5ggxg1u" path="res://assets/cats/gatoSonico.png" id="9_cq5v3"]
[ext_resource type="Script" path="res://scripts/GatoSonicButton.gd" id="10_bah8f"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pdmrm"]
texture = ExtResource("2_i221g")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xwwsn"]
texture = ExtResource("3_ukb0h")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_bfcs4"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_pdmrm")
sources/1 = SubResource("TileSetAtlasSource_xwwsn")

[sub_resource type="AtlasTexture" id="AtlasTexture_3g6o6"]
atlas = ExtResource("6_gny0a")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_imb2m"]
atlas = ExtResource("6_gny0a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkm1k"]
atlas = ExtResource("6_gny0a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_603ih"]
atlas = ExtResource("6_gny0a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00eif"]
atlas = ExtResource("6_gny0a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_n7gk4"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_3g6o6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imb2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkm1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imb2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkm1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imb2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkm1k")
}],
"loop": true,
"name": &"action",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_603ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00eif")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_s3bu3"]
atlas = ExtResource("7_bh45y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34vi8"]
atlas = ExtResource("7_bh45y")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p38j"]
atlas = ExtResource("7_bh45y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sam0"]
atlas = ExtResource("7_bh45y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0b75"]
atlas = ExtResource("7_bh45y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ux2c"]
atlas = ExtResource("7_bh45y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wkhn0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3bu3")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_34vi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p38j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sam0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p38j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sam0")
}],
"loop": true,
"name": &"action",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0b75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ux2c")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_47m66"]
atlas = ExtResource("9_cq5v3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06k0x"]
atlas = ExtResource("9_cq5v3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dx6c"]
atlas = ExtResource("9_cq5v3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_px5wv"]
atlas = ExtResource("9_cq5v3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_66s5m"]
atlas = ExtResource("9_cq5v3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_aypya"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_47m66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06k0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dx6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06k0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dx6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06k0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dx6c")
}],
"loop": true,
"name": &"action",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_px5wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66s5m")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Hotbar" type="Node2D"]
script = ExtResource("1_xwrf6")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_bfcs4")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 9, 1, 0, 65536, 0, 0, 65538, 0, 0, 65537, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65543, 0, 0, 65542, 0, 0, 65549, 0, 0, 65550, 0, 0, 14, 1, 0, 13, 1, 0, 65547, 0, 0, 65548, 0, 0, 15, 1, 0, 65551, 0, 0, 65552, 0, 0, 16, 1, 0)

[node name="LevelLabel" type="Label" parent="."]
offset_left = 14.0
offset_top = 6.0
offset_right = 68.0
offset_bottom = 29.0
theme_override_font_sizes/font_size = 16
text = "Level 1"

[node name="FishQtd" type="Label" parent="."]
offset_left = 43.0
offset_top = 34.0
offset_right = 97.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 16
text = "275
"

[node name="Rog√©rio" type="Sprite2D" parent="."]
self_modulate = Color(0.964742, 0.964742, 0.964742, 1)
position = Vector2(8, 30)
texture = ExtResource("3_wx4di")
centered = false

[node name="GatoBolaDePeloButton" type="Button" parent="."]
offset_left = 97.0
offset_top = 8.0
offset_right = 145.0
offset_bottom = 56.0
script = ExtResource("5_vq4bl")
metadata/_edit_group_ = true

[node name="Frame" type="Sprite2D" parent="GatoBolaDePeloButton"]
position = Vector2(24, 24)
texture = ExtResource("5_fwt8m")

[node name="GatoBolaDePelo" type="AnimatedSprite2D" parent="GatoBolaDePeloButton"]
position = Vector2(24, 24)
sprite_frames = SubResource("SpriteFrames_n7gk4")
animation = &"action"

[node name="GatoDePauButton" type="Button" parent="."]
offset_left = 158.0
offset_top = 8.0
offset_right = 206.0
offset_bottom = 56.0
script = ExtResource("9_63rba")
metadata/_edit_group_ = true

[node name="Frame" type="Sprite2D" parent="GatoDePauButton"]
position = Vector2(24, 24)
texture = ExtResource("5_fwt8m")

[node name="GatoDePau" type="AnimatedSprite2D" parent="GatoDePauButton"]
position = Vector2(24, 24)
sprite_frames = SubResource("SpriteFrames_wkhn0")
animation = &"action"

[node name="GatoSonicButton" type="Button" parent="."]
offset_left = 219.0
offset_top = 9.0
offset_right = 267.0
offset_bottom = 57.0
script = ExtResource("10_bah8f")
metadata/_edit_group_ = true

[node name="Frame" type="Sprite2D" parent="GatoSonicButton"]
position = Vector2(24, 24)
texture = ExtResource("5_fwt8m")

[node name="GatoSonico" type="AnimatedSprite2D" parent="GatoSonicButton"]
position = Vector2(24, 24)
sprite_frames = SubResource("SpriteFrames_aypya")
animation = &"action"

[connection signal="pressed" from="GatoBolaDePeloButton" to="." method="_on_gato_bola_de_pelo_button_pressed"]
[connection signal="pressed" from="GatoBolaDePeloButton" to="GatoBolaDePeloButton" method="_on_pressed"]
[connection signal="pressed" from="GatoDePauButton" to="." method="_on_gato_de_pau_button_pressed"]
[connection signal="pressed" from="GatoDePauButton" to="GatoDePauButton" method="_on_pressed"]
[connection signal="pressed" from="GatoSonicButton" to="." method="_on_gato_sonic_button_pressed"]
[connection signal="pressed" from="GatoSonicButton" to="GatoSonicButton" method="_on_pressed"]
